# photo-feed

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: cd-api.yml  cd-lambdas.yml  cd-web.yml  ci-api.yml  ci-lambdas.yml  ci.yml  deploy-prod.yml
bruno/photo-feed/: bruno.json  collection.bru
bruno/photo-feed/ai/: generate.bru  job-status.bru
bruno/photo-feed/auth/: login.bru  logout.bru  refresh.bru  register.bru
bruno/photo-feed/cart/: add-item.bru  get.bru  remove-item.bru
bruno/photo-feed/environments/: local.bru  prod.bru
docs/: README.md  architecture.md  overview.md  tech-stack.md
docs/api/: auth.md  bruno.md  openapi.md
docs/debug/: api-testing.md  logs.md  seeds.md
docs/deploy/: dev-local.md  prod-remote.md
docs/develop/: ci.md  pre-commit.md  testing.md
docs/operations/: seeds.md
docs/quick-start/: docker.md  ec2.md
infra/: template-euc1.yaml  template-usw2.yaml  template.yaml
infra/ec2/: apply.sh  deploy-web.sh  deploy.sh
infra/nginx/: photo-feed.conf
infra/prod/: images.env
makefiles/: clean.mk  help.mk  vars.mk
makefiles/common/: openapi.mk
makefiles/data/: seed.mk
makefiles/django/: db.mk  users.mk
makefiles/docker/: image.mk  lifecycle.mk  logs.mk
makefiles/front/: lifecycle.mk  lint.mk
makefiles/prod/: ops.mk
makefiles/quality/: test.mk
makefiles/sam/: build.mk
makefiles/tooling/: openapi.mk  uv.mk
schemas/: openapi.yaml
(+13 files in other folders)
