[project]
name = "photo-feed"
version = "0.1.0"
description = "Instagram-shop backend with Django + AWS Lambda (lab 4)"
requires-python = "==3.12.*"
dependencies = []

[tool.uv.workspace]
members = ["packages/api", "packages/cut_image", "packages/generate_image"]

[dependency-groups]
dev = [
    "moto>=5.2.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pyyaml>=6.0.3",
    "responses>=0.26.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["packages/api/src"]
testpaths = ["packages/api/tests"]
DJANGO_SETTINGS_MODULE = "api.settings.dev"
